[gd_scene load_steps=5 format=3 uid="uid://opj72oiajmun"]

[ext_resource type="Script" uid="uid://mulrgpsv2es3" path="res://core/ui/carousel_picker.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://cxxu662w0d56y" path="res://assets/ui/arrow_left.svg" id="2_dkf44"]
[ext_resource type="AudioStream" uid="uid://c6r0kfnao5cla" path="res://assets/audio/button_click.mp3" id="3_c1qjm"]
[ext_resource type="Texture2D" uid="uid://c7d4qrufunl5n" path="res://assets/ui/arrow_right.svg" id="3_u75kb"]

[node name="CarouselPicker" type="HBoxContainer"]
custom_minimum_size = Vector2(300, 60)
offset_left = 12.0
offset_right = 320.0
offset_bottom = 60.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_script")

[node name="LeftButtonContainer" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LeftButton" type="TextureButton" parent="LeftButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -30.0
offset_right = 228.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("2_dkf44")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LeftButtonContainer/LeftButton"]
stream = ExtResource("3_c1qjm")
volume_db = -10.0

[node name="DisplayLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "No items"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButtonContainer" type="Control" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RightButton" type="TextureButton" parent="RightButtonContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -30.0
offset_right = 236.0
offset_bottom = 235.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_u75kb")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RightButtonContainer/RightButton"]
stream = ExtResource("3_c1qjm")
volume_db = -10.0
